# multisearch-mcp

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  serve.py
servers/ddgs_multisearch/: server.py
tests/: conftest.py  test_argument_forwarding.py  test_search_success.py  test_tools_listing.py  test_validation_and_errors.py
