[project]
name = "multisearch-mcp"
version = "0.1.0"
description = "Unified multi-category DDGS MCP server exposing a single 'search' tool (text, images, news, videos, books)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.6.0",
    "mcp[cli]>=1.16.0",
]

[dependency-groups]
dev = [
    "anyio>=4.11.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "trio>=0.31.0",
]
